--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,6 @@
 {
     "type": "sqlite",
-    "database": "./src/database/database.sqlite",
+    "database": "./src/database/database-dev.sqlite",
     "migrations": [
         "./src/database/migrations/*.ts"
     ],
