--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/gustavo8000br/back-end-happy.git",
+  "homepage": "https://gustavo8000br.github.io/back-end-happy",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -24,6 +27,7 @@
     "@types/node": "^14.11.10",
     "@types/yup": "^0.29.8",
     "dotenv": "^8.2.0",
+    "gh-pages": "^3.1.0",
     "ts-node-dev": "^1.0.0-pre.65",
     "typescript": "^4.0.3"
   }
